--- a/index.html
+++ b/index.html
@@ -7,21 +7,26 @@
     <title>Todolist</title>
 </head>
 <body">
-    <header class="px-5 py-4 border-b border-slate-400">
-<h1 class="text-4xl text-slate-700 font-medium max-w-lg mx-auto">Todolist</h1>
+    <header class="px-5 py-4 border-b border-slate-400 max-w-lg mx-auto ">
+<h1 class="text-4xl text-slate-700 font-medium ">Todolist</h1>
     </header>
     <main class="px-5 mt-10 max-w-lg mx-auto">
-        <form class="flex gap-2">
+
+        <form onsubmit="" class="flex flex-col items-center sm:flex-row gap-2">
             <input placeholder="What are you doing today,buddy?"
-              class="p-2 rounded-lg border border-slate-100 w-full">
+              class="p-2 rounded-lg border border-slate-100 w-full"
+              id="todo-input">
+              
             <button class="bg-blue-500 rounded-lg px-2.5 py-2 text-sm text-white w-[100px]">
                 Add todo</button>
         </form>
-        <section>
+
+
+        <section class="mt-5">
             <div class="group flex justify-between py-3 px-2.5 rounded-lg hover:bg-slate-50">
                 <!-- title,action,(edit,delete,view) -->
                 <a href="">Listen to music</a>
-                <section class="gap-3 invisible group-hover:visible  ">
+                <section class="gap-3 hidden group-hover:flex ">
                     <button>  
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
