--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Todolist</title>
 </head>
-<body">
-    <header class="px-5 py-4 border-b border-slate-400 max-w-lg mx-auto ">
-<h1 class="text-4xl text-slate-700 font-medium ">Todolist</h1>
+<body class="bg-purple-500 flex justify-center items-center mt-10 ">
+    <div class="w-2/4 bg-white rounded-lg ">
+    <header class="px-5 py-4 border-b border-slate-400 max-w-lg mx-auto  ">
+<h1 class="text-4xl  font-medium ">Todolist</h1>
     </header>
     <main class="px-5 mt-10 max-w-lg mx-auto">
 
-        <form onsubmit="" class="flex flex-col items-center sm:flex-row gap-2">
+        <form onsubmit="createTodo(event)" class="flex flex-col items-center sm:flex-row gap-2 mb-5">
             <input placeholder="What are you doing today,buddy?"
               class="p-2 rounded-lg border border-slate-100 w-full"
               id="todo-input">
               
-            <button class="bg-blue-500 rounded-lg px-2.5 py-2 text-sm text-white w-[100px]">
+            <button class="bg-purple-500 rounded-lg px-2.5 py-2 text-sm text-white w-[100px]">
                 Add todo</button>
         </form>
 
-
-        <section class="mt-5">
+<div id="todos">
+        <section class="mt-5 ">
             <div class="group flex justify-between py-3 px-2.5 rounded-lg hover:bg-slate-50">
                 <!-- title,action,(edit,delete,view) -->
                 <a href="">Listen to music</a>
@@ -40,6 +42,10 @@
                 </section>
             </div>
         </section>
+    </div>
+</div>
      </main>
+     <script src="index.js"></script>
+   
 </body>
 </html>
