--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Todolist</title>
 </head>
 <body class="bg-purple-500 flex justify-center items-center mt-10 ">
     <div class="w-2/4 bg-white rounded-lg ">
     <header class="px-5 py-4 border-b border-slate-400 max-w-lg mx-auto  ">
-<h1 class="text-4xl  font-medium ">Todolist</h1>
+<h1 class="text-2xl text-center font-medium ">Todolist</h1>
     </header>
     <main class="px-5 mt-10 max-w-lg mx-auto">
 
