--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Todolist</title>
 </head>
+
 <body class="bg-purple-500 flex justify-center items-center mt-10 ">
     <div class="w-2/4 bg-white rounded-lg ">
     <header class="px-5 py-4 border-b border-slate-400 max-w-lg mx-auto  ">
@@ -15,35 +16,23 @@
     </header>
     <main class="px-5 mt-10 max-w-lg mx-auto">
 
-        <form onsubmit="createTodo(event)" class="flex flex-col items-center sm:flex-row gap-2 mb-5">
-            <input placeholder="What are you doing today,buddy?"
+        <form onsubmit="createTodo(event)" class="flex flex-col items-center sm:flex-row gap-2">
+            <input maxlength="40" placeholder="What are you doing today,buddy?"
               class="p-2 rounded-lg border border-slate-100 w-full"
               id="todo-input">
               
-            <button class="bg-purple-500 rounded-lg px-2.5 py-2 text-sm text-white w-[100px]">
+            <button id="add-todo-btn" class="bg-purple-500 rounded-lg px-2.5 py-2 text-sm text-white w-[100px]">
                 Add todo</button>
-        </form>
+            <button id="update-todo-btn" onclick="updateTodo()" class="bg-purple-500 rounded-lg px-2.5 py-2 text-sm text-white w-[100px] hidden">
+                Update todo</button>
 
-<div id="todos">
-        <section class="mt-5 ">
-            <div class="group flex justify-between py-3 px-2.5 rounded-lg hover:bg-slate-50">
-                <!-- title,action,(edit,delete,view) -->
-                <a href="">Listen to music</a>
-                <section class="gap-3 hidden group-hover:flex ">
-                    <button>  
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
-                        </svg>
-                    </button>
-                    <button>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>                                 
-                    </button>
-                </section>
-            </div>
-        </section>
-    </div>
+        </form>
+<span class="hidden" id="form-message"></span>
+
+
+<!-- todo text area -->
+<div class="mt-5" id="todos">
+       
 </div>
      </main>
      <script src="index.js"></script>
